chore(upgrade): Authorization upgrade
Signed-off-by: Smruti Prakash Sahoo <smruti.sahoo@siemens.com>