@@ -10,8 +10,8 @@
   ~ SPDX-License-Identifier: EPL-2.0
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.eclipse.sw360</groupId>
@@ -46,12 +46,12 @@
 
   <modules>
     <module>build-configuration</module>
-    <module>third-party</module>
+    <!--<module>third-party</module>-->
     <module>utils</module>
     <module>libraries</module>
     <module>backend</module>
     <module>rest</module>
-    <module>clients</module>
+    <!--<module>clients</module>-->
   </modules>
 
   <distributionManagement>
@@ -106,7 +106,7 @@
     <commons-collection4.version>4.4</commons-collection4.version>
     <commons-compress.version>1.21</commons-compress.version>
     <commons-configuration.version>1.10</commons-configuration.version>
-    <commons-csv.version>1.9.0</commons-csv.version>
+    <commons-csv.version>1.10.0</commons-csv.version>
     <commons-io.version>2.11.0</commons-io.version>
     <commons-lang3.version>3.12.0</commons-lang3.version>
     <commons-text.version>1.10.0</commons-text.version>
@@ -118,7 +118,7 @@
     <glassfish-jaxb.version>2.3.2</glassfish-jaxb.version>
     <guava.version>32.0.0-jre</guava.version>
     <hamcrest.version>1.3</hamcrest.version>
-    <httpclient.version>4.5.14</httpclient.version>
+    <httpclient.version>5.3.1</httpclient.version>
     <httpcore.version>4.4.16</httpcore.version>
     <jakarta-xml-bind.version>2.3.2</jakarta-xml-bind.version>
     <javax-activation.version>1.1.1</javax-activation.version>
@@ -142,7 +142,7 @@
     <project-lombok.version>1.18.24</project-lombok.version>
     <slf4j.version>1.7.30</slf4j.version>
     <spotless.version>2.29.0</spotless.version>
-    <spring-boot.version>2.7.6</spring-boot.version>
+    <spring-boot.version>3.3.0</spring-boot.version>
     <spring-restdocs-asciidoctor.version>2.0.6.RELEASE</spring-restdocs-asciidoctor.version>
     <spring-restdocs.version>2.0.6.RELEASE</spring-restdocs.version>
     <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
@@ -151,13 +151,11 @@
     <springdoc-openapi-ui.version>1.7.0</springdoc-openapi-ui.version>
     <springdoc-openapi-security.version>1.7.0</springdoc-openapi-security.version>
     <springdoc-openapi-webmvc.version>1.7.0</springdoc-openapi-webmvc.version>
-    <springframework.version>5.3.27</springframework.version>
-    <thrift.version>0.18.1</thrift.version>
+    <springframework.version>6.1.5</springframework.version>
+    <thrift.version>0.19.0</thrift.version>
     <tika.version>1.28.5</tika.version>
     <wiremock.version>2.26.0</wiremock.version>
-    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-    <!-- some mem optimization here -->
-    <argLine>-Dcatalina.home=${project.build.directory}/home -Xms128m -Xmx256m -XX:MaxPermSize=512m</argLine>
+    <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
   </properties>
 
 
@@ -179,8 +177,8 @@
         <version>${okhttp.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
         <version>${httpclient.version}</version>
       </dependency>
       <dependency>
@@ -535,9 +533,9 @@
         <version>${springframework.version}</version>
       </dependency>
       <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>${javax.servlet-api.version}</version>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>${jakarta.servlet-api.version}</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
